--- a/yes_page.html
+++ b/yes_page.html
@@ -64,8 +64,13 @@
         
         <div class="note-container" id="noteContainer">
             <p class="note-text">
-                Write your special message here! This could be anything you want to say - 
-                a sweet message, plans for your date, or just how excited you are! 💕
+                Clicking yes,  just know my heart smiled in a manner which I do not believe can be fully described by words but I shall attempt to do so.
+What we have in common is not something I flaunt. It is more than love during the big, obvious times; it is love during the little times as well, how you came to me, how patient you were with me, how you took care of me when you did not need to but did. You loved me in a manner that transformed me and I hold that close to my heart with a lot of gratitude.
+I cherish you deeply. I love the laughs we shared, the discussions which lasted longer than we intended and the memories we made without knowing that it would be this much. Even our battles, our misunderstandings, our struggles--they are of interest to me. Since with their help we did not dissolve. We got to know, we developed, we decided to continue. And that means everything.
+You are one whom I have a place for in my heart, not despite the kind of person you are, but the way you make me feel seen, understood, and cared about. Being with you has been actual, flawed, gorgeous and worth every minute.
+So, me, truthful and naked, fair, ask you with my whole heart:
+Shall I keep on selecting us--with me--this Valentine-day and afterwards? [?]
+                with love, Ifeanyi💕
             </p>
         </div>
         
